<resources>
    <string name="app_name">Burhan Home Controller</string>

    <string name="butText_TurnBulb1">Light 1</string>
    <string name="butText_TurnBulb2">Light 2</string>
    <string name="butText_TurnBulb3">Light 3</string>
    <string name="butText_TurnBulb4">Light 4</string>
    <string name="butText_TurnBulb5">Light 5</string>
    <string name="butText_TurnBulb6">Light 6</string>
    <string name="butText_TurnBulb7">Light 7</string>
    <string name="butText_TurnBulb8">Light 8</string>

    <string name="tv_Info">TextView</string>
    <string name="tv_info_text">Please provide the information about the device under configuration!!</string>
    <string name="tv_UnitID_text">1. Remote Unit ID: </string>
    <string name="tv_DevInUnit">2. Number of controllable devices in Unit: </string>
    <string name="but_">Configure Remote Unit</string>
    <string name="but_ConfigRemoteUnit_Txt">Configure Remote Unit</string>
    <string name="but_ConfigText">Save Configuration</string>

    <!-- Button: DisplayAvailableUnits-->
    <string name="but_DisplayAvailableUnits_Txt">Available Remote Units</string>
    <string name="bedroom_1">Bedroom 1</string>
    <string name="bedroom_2">Bedroom 2</string>
    <string name="bedroom_3">Bedroom 3</string>
    <string name="dining_hall">Dining Hall</string>
    <string name="tv_lounge">TV Lounge</string>
    <string name="kitchen">Kitchen</string>
    <string name="car_porch">Car Porch</string>
    <string name="terrace">Terrace</string>
    <string name="light_1">Light 1</string>
    <string name="light_2">Light 2</string>
    <string name="light_3">Light 3</string>
    <string name="light_4">Light 4</string>
    <string name="fan_1">Fan 1</string>
    <string name="fan_2">Fan 2</string>
    <string name="ac_1">AC 1</string>
    <string name="ac_2">AC 2</string>
    <string name="bedroom_1">Bedroom 1</string>


</resources>
