<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.homeinhand.Room">

    <include layout="@layout/toolbar_layout"/>

    <TextView
        android:id="@+id/bedroom1text"
        android:layout_width="380dp"
        android:layout_height="76dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/mytitletext"
        android:gravity="center"
        android:text="@string/bedroom_1"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textSize="30sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ac1"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="496dp"
        android:background="@drawable/mybuttonbedroom"
        android:text="@string/ac_1"
        android:textAllCaps="false"
        android:textColor="#8A0936"
        android:textColorHighlight="#673AB7"
        android:textColorLink="#2196F3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fan1"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="372dp"
        android:background="@drawable/mybuttonbedroom"
        android:text="@string/fan_1"
        android:textAllCaps="false"
        android:textColor="#8A0936"
        android:textColorHighlight="#673AB7"
        android:textColorLink="#2196F3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/light3"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="248dp"
        android:background="@drawable/mybuttonbedroom"
        android:text="@string/light_3"
        android:textAllCaps="false"
        android:textColor="#8A0936"
        android:textColorHighlight="#673AB7"
        android:textColorLink="#2196F3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/light1"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/mybuttonbedroom"
        android:text="@string/light_1"
        android:textAllCaps="false"
        android:textColor="#8A0936"
        android:textColorHighlight="#673AB7"
        android:textColorLink="#2196F3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/light2"
        style="@android:style/Widget.Button.Toggle"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/mybuttonbedroom"
        android:text="@string/light_2"
        android:textAllCaps="false"
        android:textColor="#8A0936"
        android:textColorHighlight="#673AB7"
        android:textColorLink="#2196F3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ac2"
        style="@android:style/Widget.Button.Toggle"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="496dp"
        android:background="@drawable/mybuttonbedroom"
        android:text="@string/ac_2"
        android:textAllCaps="false"
        android:textColor="#8A0936"
        android:textColorHighlight="#673AB7"
        android:textColorLink="#2196F3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fan2"
        style="@android:style/Widget.Button.Toggle"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="372dp"
        android:background="@drawable/mybuttonbedroom"
        android:text="@string/fan_2"
        android:textAllCaps="false"
        android:textColor="#8A0936"
        android:textColorHighlight="#673AB7"
        android:textColorLink="#2196F3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/light4"
        style="@android:style/Widget.Button.Toggle"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="248dp"
        android:background="@drawable/mybuttonbedroom"
        android:text="@string/light_4"
        android:textAllCaps="false"
        android:textColor="#8A0936"
        android:textColorHighlight="#673AB7"
        android:textColorLink="#2196F3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</RelativeLayout>
